# virt-viewer

./: .gitlab-ci.yml  NEWS  README.md  config.h.in  meson.build  meson_options.txt  mingw-virt-viewer.spec.in  prepare-release.sh  virt-viewer.spec  virt-viewer.spec.in
bash-completion/: meson.build
build-aux/: buildenv.py  msitool.py  post_install.py  run-windres.py  syntax-check.mk  vc-list-files
ci/: gitlab.yml  manifest.yml
ci/containers/: centos-8.Dockerfile  centos-stream-8.Dockerfile  debian-10.Dockerfile  debian-sid.Dockerfile  fedora-33.Dockerfile  fedora-34.Dockerfile  fedora-rawhide-cross-mingw32.Dockerfile  fedora-rawhide-cross-mingw64.Dockerfile  fedora-rawhide.Dockerfile  opensuse-leap-152.Dockerfile  opensuse-tumbleweed.Dockerfile  ubuntu-1804.Dockerfile  ubuntu-2004.Dockerfile
data/: meson.build  remote-viewer.appdata.xml.in  virt-viewer.wxs.in
debian/: changelog  control  gbp.conf  rules  watch
debian/patches/: Disable-automatich-usb-redirection-by-default.patch  series
icons/: meson.build
man/: meson.build  remote-viewer.pod  virt-viewer.pod
po/: LINGUAS  POTFILES  README.md  as.po  bg.po  bn.po  bn_IN.po  ca.po  cs.po  de.po  es.po  eu.po  fi.po  fr.po  gu.po  hi.po  hu.po  id.po  it.po  ja.po  kn.po  ko.po  meson.build  ml.po  mr.po  nb.po  nl.po  or.po  pa.po  pl.po  pt.po  pt_BR.po  ru.po  si.po  sk.po  sv.po  ta.po  te.po  tr.po  uk.po  (+3 more)
src/: glib-compat.c  glib-compat.h  meson.build  ovirt-foreign-menu.c  ovirt-foreign-menu.h  remote-viewer-connect.c  remote-viewer-connect.h  remote-viewer-iso-list-dialog.c  remote-viewer-iso-list-dialog.h  remote-viewer-main.c  remote-viewer.c  remote-viewer.h  virt-viewer-app.c  virt-viewer-app.h  virt-viewer-auth.c  virt-viewer-auth.h  virt-viewer-display-spice.c  virt-viewer-display-spice.h  virt-viewer-display-vnc.c  virt-viewer-display-vnc.h  virt-viewer-display-vte.c  virt-viewer-display-vte.h  virt-viewer-display.c  virt-viewer-display.h  virt-viewer-enums.c.etemplate  virt-viewer-enums.h.etemplate  virt-viewer-file-transfer-dialog.c  virt-viewer-file-transfer-dialog.h  virt-viewer-file.c  virt-viewer-file.h  virt-viewer-main.c  virt-viewer-notebook.c  virt-viewer-notebook.h  virt-viewer-session-spice.c  virt-viewer-session-spice.h  virt-viewer-session-vnc.c  virt-viewer-session-vnc.h  virt-viewer-session.c  virt-viewer-session.h  virt-viewer-timed-revealer.c  (+11 more)
src/resources/: virt-viewer.gresource.xml
src/resources/ui/: remote-viewer-connect.ui  remote-viewer-iso-list.ui  virt-viewer-about.ui  virt-viewer-auth.ui  virt-viewer-file-transfer-dialog.ui  virt-viewer-guest-details.ui  virt-viewer-menus.ui  virt-viewer-preferences.ui  virt-viewer-shortcuts.ui  virt-viewer-vm-connection.ui  virt-viewer.ui
tests/: meson.build  redirect-test.c  test-hotkeys.c  test-monitor-alignment.c
